// Copyright 2026 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.api.v1;

import "google/api/annotations.proto";
import "proto/config/v1/skill.proto";
import "google/protobuf/go_features.proto";

// option features.(pb.go).api_level = API_OPAQUE;

option go_package = "github.com/mcpany/core/proto/api/v1";
option java_outer_classname = "SkillServiceProto";
option features.field_presence = IMPLICIT;

// SkillService provides methods to manage Skills (composite or higher-level capabilities).
service SkillService {
  // ListSkills retrieves a list of all available skills.
  rpc ListSkills(ListSkillsRequest) returns (ListSkillsResponse) {
    option (google.api.http) = {
      get: "/v1/skills"
    };
  }

  // GetSkill retrieves details of a specific skill by name.
  rpc GetSkill(GetSkillRequest) returns (GetSkillResponse) {
    option (google.api.http) = {
      get: "/v1/skills/{name}"
    };
  }

  // CreateSkill creates a new skill definition.
  rpc CreateSkill(CreateSkillRequest) returns (CreateSkillResponse) {
    option (google.api.http) = {
      post: "/v1/skills"
      body: "skill"
    };
  }

  // UpdateSkill updates an existing skill definition.
  rpc UpdateSkill(UpdateSkillRequest) returns (UpdateSkillResponse) {
    option (google.api.http) = {
      put: "/v1/skills/{name}"
      body: "skill"
    };
  }

  // DeleteSkill removes a skill definition.
  rpc DeleteSkill(DeleteSkillRequest) returns (DeleteSkillResponse) {
    option (google.api.http) = {
      delete: "/v1/skills/{name}"
    };
  }
}

// ListSkillsRequest is the request for listing skills.
message ListSkillsRequest {}

// ListSkillsResponse contains the list of skills.
message ListSkillsResponse {
  // The list of available skills.
  repeated mcpany.config.v1.Skill skills = 1;
}

// GetSkillRequest identifies the skill to retrieve.
message GetSkillRequest {
  // The name of the skill to retrieve.
  string name = 1;
}

// GetSkillResponse contains the requested skill definition.
message GetSkillResponse {
  // The skill definition.
  mcpany.config.v1.Skill skill = 1;
}

// CreateSkillRequest contains the skill to be created.
message CreateSkillRequest {
  // The skill definition to create.
  mcpany.config.v1.Skill skill = 1;
}

// CreateSkillResponse contains the created skill.
message CreateSkillResponse {
  // The skill definition that was created.
  mcpany.config.v1.Skill skill = 1;
}

// UpdateSkillRequest identifies the skill to update and provides the new definition.
message UpdateSkillRequest {
  // The name of the skill to update.
  string name = 1;
  // The new skill definition.
  mcpany.config.v1.Skill skill = 2;
}

// UpdateSkillResponse contains the updated skill.
message UpdateSkillResponse {
  // The skill definition after update.
  mcpany.config.v1.Skill skill = 1;
}

// DeleteSkillRequest identifies the skill to delete.
message DeleteSkillRequest {
  // The name of the skill to delete.
  string name = 1;
}

// DeleteSkillResponse confirms the deletion.
message DeleteSkillResponse {
  // Empty
}
